@@ -12,6 +12,7 @@ recent:
 	warning fixups
 	implement "local" and "forward" for iptables backend
 	add "-r" option to mirror "-h"
+	cleanup ipchains driver somewhat
 
 0.6:
 	disable negation of conjunctions ("or"s, aka brace-grouping) for now
@@ -49,4 +50,4 @@ recent:
 	iptables driver
 	a few bugs
 
-$Id: HISTORY,v 1.22 2002/07/18 21:20:02 matthew Exp $
+$Id: HISTORY,v 1.23 2002/07/18 21:23:19 matthew Exp $
